# tinytorch-hip

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cpp/: add_kernel.hip  bindings.cpp
src/tinytorch_hip/: __init__.py
tests/: test_add.py
