[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.11",
  "cmake>=3.26",
  "ninja>=1.11"
]
build-backend = "scikit_build_core.build"

[project]
name = "tinytorch-hip"
version = "0.1.0"
description = "Standalone HIP-accelerated Python package"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Yaohui Zhang"}]
dependencies = []

[tool.scikit-build]
wheel.expand-macos-universal-tags = false